fix - minor issues